# cpp_initproj_files

./: CMakeLists.txt  README.md  copy_without_git.sh
src/: class1.cpp  class1.hpp  class2.cpp  class2.hpp  main.cpp
tests/: class1_test.cpp  class2_test.cpp
